@@ -1,3 +1,8 @@
+2016-07-04  Yuri Rumyantsev  <ysrumyan@gmail.com>
+
+	* gcc/testsuite/gcc.target/i386/avx512f-vect-perm-1.c: New test.
+	* gcc/testsuite/gcc.target/i386/avx512f-vect-perm-2.c: New test.
+
 2016-07-04  Ramana Radhakrishnan  <ramana.radhakrishnan@arm.com>
 
 	PR target/63874
